# bisera

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
bisera-client/: CMakeLists.txt
bisera-client/src/: bisera.cpp  game.cpp  game.h  gamestate.h  mainmenu_state.cpp  mainmenu_state.h  mainwindow.cpp  mainwindow.h  material.h  mesh.cpp  mesh.h  render.h  shader.cpp  shader.h  shadermanager.cpp  shadermanager.h  texture.cpp  texture.h  texturemanager.cpp  texturemanager.h
doc/: .gitignore  Dependencies.md  GameIdeas.md
examples/: CMakeLists.txt  bisera-game.cpp  bisera.cpp  mainmenu_state.cpp  mainmenu_state.hpp
include/bisera/: game.hpp  mainwindow.hpp  mesh.hpp  renderer.hpp  shader.hpp  texture.hpp
src/: CMakeLists.txt  Makefile  bisera.cpp  game.cpp  game.h  game.hpp  gamestate.h  mainmenu_state.cpp  mainmenu_state.h  mainwindow.cpp  mainwindow.h  mainwindow.hpp  material.hpp  mesh.cpp  mesh.hpp  render.h  render.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/bisera-client/: CMakeLists.txt
src/bisera-client/src/: game.h  gamestate.h  mainmenu_state.cpp  mainwindow.h  render.h
tests/: CMakeLists.txt  cube.cpp  loadtextures.cpp  textures.cpp
tests/assets/: loadtextures.fs  loadtextures.vs
